# volleypro_auth

./: .env.example  .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 56d9a9c0ef9e_initial_migration.py
app/: admin.py  main.py
app/api/v1/routers/: __init__.py  auth.py
app/core/: config.py  session.py
app/core/utils/: email_code.py  jwt.py  security.py
app/db/: base.py
app/db/models/: code.py  user.py
app/db/repo/: code.py  user.py
app/schemas/: auth.py  user.py
app/services/: auth.py  email.py  user.py
backend/: pyproject.toml
backend/app/: confg.py  database.py
backend/app/models/: __init__.py  category.py  product.py
